October 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Gtk2Gui.c: Disable the "Graphics/Sound/CD-ROM/Controller" menuitems
   when the emu is already running.

September 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Re-added the "Graphics/Sound/CD-ROM/Controller" menuitems
   in the configuration menu, which are more self-explanative than a "Plugins
   and BIOS".
 * gui/Gtk2Gui.c: Likewise.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po, po/pt_BR.po: Updated.
 * libpcsxcore/cdriso.c: Implemented MDS parsing. MDF files with interleaved
   subchannel data is now supported.
 * win32/gui/WndMain.c: Moved States submenu from File menu to Emulator menu.

September 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Fixed filenames with spaces when loading .toc file
   (Thanks dario86). Force byteswap if .toc file is loaded as cdrdao uses
   Big-Endian for CD Audio. Fixed skipping of the first 2 seconds when playing
   CDDA Track #2. Check for image.toc if image.toc.bin is loaded.

September 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/CheatDlg.c: Always enable the value inputbox when "New Search" is
   clicked.

September 21, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdrom.c: Reverted the previous change as the CD change problem
   can be fixed in the cdrSapu plugin.

September 20, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/glue/sys/mman.h: Use VirtualAlloc() and VirtualFree() instead of
   malloc() and free().
 * libpcsxcore/ix86/iR3000A.c: Minor cleanup.
 * po/zh_TW.po: Updated.
 * libpcsxcore/cdrom.c: Close & reopen the CDR plugin after switching discs.

September 18, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/CheatDlg.c: Disable "Search Type" combo box if search results
   already exist.

September 16, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/pt_BR.po, po/pt_BR.gmo: Added Portuguese (Brazil) translation. Thanks
   to Tibério Vítor <tvtoon at gmail dot com>.